WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218731
Exceptions under PlatformCALayerCocoa::drawLayerContents with DisplayList-backed layers
https://bugs.webkit.org/show_bug.cgi?id=218731
Summary
Exceptions under PlatformCALayerCocoa::drawLayerContents with DisplayList-bac...
Tim Horton
Reported
2020-11-09 16:39:04 PST
Exceptions under PlatformCALayerCocoa::drawLayerContents with DisplayList-backed layers
Attachments
Patch
(8.60 KB, patch)
2020-11-09 16:39 PST
,
Tim Horton
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(8.84 KB, patch)
2020-11-09 16:54 PST
,
Tim Horton
simon.fraser
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(8.99 KB, patch)
2020-11-09 17:48 PST
,
Tim Horton
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(9.02 KB, patch)
2020-11-09 18:11 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(9.11 KB, patch)
2020-11-09 18:13 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-11-09 16:39:12 PST
Created
attachment 413643
[details]
Patch
Tim Horton
Comment 2
2020-11-09 16:54:51 PST
Created
attachment 413647
[details]
Patch
Tim Horton
Comment 3
2020-11-09 17:48:38 PST
Created
attachment 413649
[details]
Patch
Tim Horton
Comment 4
2020-11-09 18:02:10 PST
Apparently I'm going to have to build for iOS :D
Tim Horton
Comment 5
2020-11-09 18:11:18 PST
Created
attachment 413650
[details]
Patch
Tim Horton
Comment 6
2020-11-09 18:13:23 PST
Created
attachment 413651
[details]
Patch
Tim Horton
Comment 7
2020-11-09 23:28:45 PST
Comment on
attachment 413651
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413651&action=review
> Source/WebCore/platform/graphics/ios/FontAntialiasingStateSaver.h:52 > +#if !PLATFORM(IOS_FAMILY_SIMULATOR)
Also, does anybody recall why this is not compiled on sim?? That seems very odd.
EWS
Comment 8
2020-11-09 23:42:53 PST
Committed
r269616
: <
https://trac.webkit.org/changeset/269616
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413651
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-11-09 23:43:17 PST
<
rdar://problem/71227714
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug