Exceptions under PlatformCALayerCocoa::drawLayerContents with DisplayList-backed layers https://bugs.webkit.org/show_bug.cgi?id=218731

Reviewed by Simon Fraser.

No new tests; all tests will cover this once GPU Process for DOM rendering lands.

* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayer::drawLayerContents):
Refactor this function to use three state savers, all released by scope instead of explicitly.
This fixes the bug in the title, which was that we would call +restoreGraphicsState on NSGraphicsContext
regardless of whether we have a platform context or not (while we'd only save if we /did/ have one).

* platform/graphics/ios/FontAntialiasingStateSaver.h:
(WebCore::FontAntialiasingStateSaver::~FontAntialiasingStateSaver):
(WebCore::FontAntialiasingStateSaver::restore): Deleted.
Make FontAntialiasingStateSaver behave like all of the other -StateSavers, performing "restore"
in its destructor.

* platform/ios/LegacyTileCache.mm:
(WebCore::LegacyTileCache::drawWindowContent):
We don't have to restore explicitly anymore.


Canonical link: https://commits.webkit.org/231406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269616 268f45cc-cd09-0410-ab3c-d52691b4dbfc